kubernetes/crim-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crim-pinoyreviewer-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - crim.pinoyreviewer.com
    secretName: crim-pinoyreviewer-tls
  rules:
  - host: crim.pinoyreviewer.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crim-pinoyreviewer-service
            port:
              number: 80
